Use common-base-module