@@ -1,1 +1,9 @@
 # CS544-EA project
+
+# Running the project
+
+Add this to your intellij run configuration.
+
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
